<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/container"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#F0E0E0"
    android:padding="16dp"
    tools:context=".MainActivity">

    <Spinner
        android:id="@+id/profile_spinner_admin"
        android:layout_width="220dp"
        android:layout_height="38dp"
        android:layout_marginBottom="10dp"
        app:layout_constraintBottom_toTopOf="@+id/bottomNavigation"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

    <TextView
        android:id="@+id/welcomeText"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="32dp"
        android:text="Administrator Home Page"
        android:textColor="#000000"
        android:textSize="24sp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />


    <RelativeLayout
        android:id="@+id/profilesLayout"
        android:layout_width="150dp"
        android:layout_height="150dp"
        android:layout_marginStart="24dp"
        android:layout_marginTop="21dp"
        android:layout_marginBottom="16dp"
        app:layout_constraintBottom_toTopOf="@+id/facilitiesLayout"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/welcomeText">

        <ImageButton
            android:id="@+id/profilesButton"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_margin="8dp"
            android:background="@drawable/round_admin_button"
            android:padding="20dp"
            android:scaleType="fitXY"
            android:src="@drawable/icon_profile_pic" />

        <TextView
            android:id="@+id/profilesButtonText"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentBottom="true"
            android:layout_centerHorizontal="true"
            android:layout_margin="10dp"
            android:clickable="false"
            android:text="Profiles"
            android:textColor="#000000" />

    </RelativeLayout>


    <RelativeLayout
        android:id="@+id/eventsLayout"
        android:layout_width="150dp"
        android:layout_height="150dp"
        android:layout_marginTop="20dp"
        android:layout_marginEnd="24dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="1.0"
        app:layout_constraintStart_toEndOf="@+id/profilesLayout"
        app:layout_constraintTop_toBottomOf="@+id/welcomeText">

        <ImageButton
            android:id="@+id/eventsButton"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_margin="8dp"
            android:background="@drawable/round_admin_button"
            android:padding="20dp"
            android:scaleType="fitXY"
            android:src="@drawable/icon_events" />

        <TextView
            android:id="@+id/eventsButtonText"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentBottom="true"
            android:layout_centerHorizontal="true"
            android:layout_margin="10dp"
            android:clickable="false"
            android:text="Events"
            android:textColor="#000000" />
    </RelativeLayout>

    <RelativeLayout
        android:id="@+id/imagesLayout"
        android:layout_width="150dp"
        android:layout_height="150dp"
        android:layout_marginHorizontal="24dp"
        android:layout_marginStart="32dp"
        android:layout_marginTop="12dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toEndOf="@+id/facilitiesLayout"
        app:layout_constraintTop_toBottomOf="@+id/eventsLayout">

        <ImageButton
            android:id="@+id/imagesButton"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_margin="8dp"
            android:background="@drawable/round_admin_button"
            android:padding="24dp"
            android:scaleType="fitXY"
            android:src="@drawable/icon_images" />

        <TextView
            android:id="@+id/imagesButtonText"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentBottom="true"
            android:layout_centerHorizontal="true"
            android:layout_margin="10dp"
            android:clickable="false"
            android:text="Images"
            android:textColor="#000000" />
    </RelativeLayout>

    <RelativeLayout
        android:id="@+id/facilitiesLayout"
        android:layout_width="150dp"
        android:layout_height="150dp"
        android:layout_marginStart="24dp"
        android:layout_marginTop="12dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/profilesLayout">

        <ImageButton
            android:id="@+id/facilitiesButton"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_margin="8dp"
            android:background="@drawable/round_admin_button"
            android:padding="20dp"
            android:scaleType="fitXY"
            android:src="@drawable/icon_facilities" />

        <TextView
            android:id="@+id/facilitiesButtonText"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentBottom="true"
            android:layout_centerHorizontal="true"
            android:layout_margin="10dp"
            android:clickable="false"
            android:text="Facilities"
            android:textColor="#000000" />
    </RelativeLayout>

    <LinearLayout
        android:id="@+id/bottomNavigation"
        android:layout_width="match_parent"
        android:layout_height="60dp"
        android:background="@color/white"
        android:gravity="center"
        android:orientation="horizontal"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent">

        <ImageButton
            android:id="@+id/homeIcon"
            android:layout_width="50dp"
            android:layout_height="50dp"
            android:layout_marginStart="30dp"
            android:layout_marginEnd="40dp"
            android:background="@drawable/round_admin_button"
            android:padding="5dp"
            android:scaleType="fitXY"
            android:src="@drawable/icon_home" />

        <ImageButton
            android:id="@+id/searchIcon"
            android:layout_width="50dp"
            android:layout_height="50dp"
            android:layout_marginStart="30dp"
            android:layout_marginEnd="40dp"
            android:background="@drawable/round_admin_button"
            android:padding="5dp"
            android:scaleType="fitXY"
            android:src="@drawable/icon_search" />

        <ImageButton
            android:id="@+id/profileIcon"
            android:layout_width="50dp"
            android:layout_height="50dp"
            android:layout_marginStart="30dp"
            android:layout_marginEnd="40dp"
            android:background="@drawable/round_admin_button"
            android:padding="5dp"
            android:scaleType="centerInside"
            android:src="@drawable/icon_profile" />
    </LinearLayout>


</androidx.constraintlayout.widget.ConstraintLayout>
