...
        android:background="@color/base"
        android:orientation="vertical"
        app:layout_constraintTop_toBottomOf="@id/prof_pic"
        tools:ignore="MissingConstraints">

        <EditText
            android:id="@+id/Name"
            android:layout_width="match_parent"
            android:layout_height="48dp"
            android:ems="30"
            android:inputType="text"
            android:text="Name" />

...
        android:textSize="18sp"
        app:cornerRadius="7dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/text_box" />

    <Button
        android:id="@+id/delete_button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="36dp"
        android:backgroundTint="@color/button"
        android:padding="30dp"
        android:text="DELETE"
...
