...
            android:textSize="32sp"
            android:paddingTop="16dp"
            android:paddingBottom="16dp"
            android:gravity="center"/>

        <ListView
            android:id="@+id/gen_list"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="1"
            android:divider="@android:color/transparent"
            android:dividerHeight="10dp" />

...
