<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#E4D0D0"
    android:fitsSystemWindows="true">

    <!-- ScrollView to wrap the content -->
    <ScrollView
        android:id="@+id/scrollView"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintBottom_toTopOf="@+id/bottomNavigation">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:padding="16dp">

            <TextView
                android:id="@+id/profileTitle"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_marginTop="32dp"
                android:fontFamily="@font/yaldevi_semibold"
                android:text="@string/create_a_profile"
                android:textColor="#867070"
                android:textSize="25sp" />

            <TextView
                android:id="@+id/name"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="24dp"
                android:fontFamily="@font/yaldevi_semibold"
                android:text="@string/first_and_last_name"
                android:textColor="#867070" />

            <EditText
                android:id="@+id/nameInput"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="8dp"
                android:fontFamily="@font/yaldevi_semibold"
                android:hint="@string/enter_name"
                android:inputType="text"
                android:textColor="#867070" />

            <TextView
                android:id="@+id/email"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="24dp"
                android:fontFamily="@font/yaldevi_semibold"
                android:text="@string/email"
                android:textColor="#867070" />

            <EditText
                android:id="@+id/emailInput"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="8dp"
                android:fontFamily="@font/yaldevi_semibold"
                android:hint="@string/enter_email"
                android:inputType="text"
                android:textColor="#867070"
                tools:ignore="TextFields" />

            <TextView
                android:id="@+id/phoneNumber"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="24dp"
                android:fontFamily="@font/yaldevi_semibold"
                android:text="@string/phone_number_optional"
                android:textColor="#867070" />

            <EditText
                android:id="@+id/editTextPhone"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="8dp"
                android:fontFamily="@font/yaldevi_semibold"
                android:hint="@string/enter_phone_number"
                android:inputType="phone"
                android:textColor="#867070" />

            <TextView
                android:id="@+id/profilePictureText"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="24dp"
                android:fontFamily="@font/yaldevi_semibold"
                android:text="@string/profile_picture"
                android:textColor="#867070" />

            <RelativeLayout
                android:id="@+id/profilePictureLayout"
                android:layout_width="150dp"
                android:layout_height="150dp"
                android:layout_marginTop="16dp"
                android:layout_gravity="center">

                <ImageView
                    android:id="@+id/profilePicture"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_margin="8dp"
                    android:background="@drawable/round_admin_button"
                    android:contentDescription="@string/profile_picture"
                    android:padding="20dp"
                    android:scaleType="centerCrop"
                    android:src="@drawable/icon_profile_pic" />
            </RelativeLayout>

            <LinearLayout
                style="?android:attr/buttonBarStyle"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="24dp"
                android:orientation="horizontal"
                android:gravity="center">

                <Button
                    android:id="@+id/takePicture"
                    style="?android:attr/buttonBarButtonStyle"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginEnd="8dp"
                    android:backgroundTint="#F5EBEB"
                    android:fontFamily="@font/yaldevi_semibold"
                    android:text="@string/take_picture"
                    android:textColor="#000000" />

                <Button
                    android:id="@+id/uploadPicture"
                    style="?android:attr/buttonBarButtonStyle"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:backgroundTint="#F5EBEB"
                    android:fontFamily="@font/yaldevi_semibold"
                    android:text="@string/upload_picture"
                    android:textColor="#000000" />
            </LinearLayout>

            <LinearLayout
                style="?android:attr/buttonBarStyle"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="24dp"
                android:gravity="center"
                android:orientation="horizontal">

                <Button
                    android:id="@+id/save"
                    style="?android:attr/buttonBarButtonStyle"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginEnd="8dp"
                    android:backgroundTint="#F5EBEB"
                    android:fontFamily="@font/yaldevi_semibold"
                    android:text="@string/save"
                    android:textColor="#000000" />

                <Button
                    android:id="@+id/cancel"
                    style="?android:attr/buttonBarButtonStyle"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:backgroundTint="#F5EBEB"
                    android:fontFamily="@font/yaldevi_semibold"
                    android:text="@string/cancel"
                    android:textColor="#000000" />
            </LinearLayout>
        </LinearLayout>
    </ScrollView>

    <LinearLayout
        android:id="@+id/bottomNavigation"
        android:layout_width="match_parent"
        android:layout_height="60dp"
        android:background="@color/white"
        android:gravity="center"
        android:orientation="horizontal"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent">

        <ImageButton
            android:id="@+id/homeIcon"
            android:layout_width="50dp"
            android:layout_height="50dp"
            android:layout_marginStart="30dp"
            android:layout_marginEnd="40dp"
            android:background="@drawable/round_admin_button"
            android:contentDescription="@string/home"
            android:padding="5dp"
            android:scaleType="fitXY"
            android:src="@drawable/icon_home" />
    </LinearLayout>

</androidx.constraintlayout.widget.ConstraintLayout>
