...
    android:background="#F0E0E0"
    android:padding="16dp"
    android:fitsSystemWindows="true"
    tools:context=".MainActivity">

    <TextView
        android:id="@+id/welcomeTitleEntrant"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="32dp"
        android:fontFamily="@font/yaldevi_semibold"
        android:text="Welcome to Quacks!"
        android:textColor="@color/text"
...
        android:layout_marginBottom="16dp"
        app:layout_constraintBottom_toTopOf="@+id/scanQRCodeLayout"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/welcomeTitleEntrant">

        <ImageButton
            android:id="@+id/profileButton"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_margin="8dp"
            android:background="@drawable/round_admin_button"
            android:padding="20dp"
            android:scaleType="fitXY"
...
